--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 
 {
   "name": "super-gemini-bros",
-  "version": "1.0.0",
-  "description": "A 2D Mario-style platformer",
-  "main": "index.tsx",
+  "version": "1.1.0",
+  "private": true,
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.38.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0"
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.7.2",
+    "vite": "^6.0.3"
   },
   "scripts": {
     "dev": "vite",
